language/move-prover/tests/sources/functional/specs_in_fun_ref.exp
Move prover returns: exiting with boogie verification errors
error:  This loop invariant might not be maintained by the loop.

     ┌── tests/sources/functional/specs_in_fun_ref.move:109:17 ───
     │
 109 │                 assert x == 0;
     │                 ^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/specs_in_fun_ref.move:104:5: simple7 (entry)
     =     at tests/sources/functional/specs_in_fun_ref.move:105:13: simple7
     =         n = <redacted>
     =     at tests/sources/functional/specs_in_fun_ref.move:108:13: simple7
     =         x = <redacted>
     =     at tests/sources/functional/specs_in_fun_ref.move:107:9: simple7
     =         x = <redacted>
     =     at tests/sources/functional/specs_in_fun_ref.move:113:19: simple7
